<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tilNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombres_completos"
            style = "@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/confirmacion_fechaN"
        android:inputType="text"
        style = "@style/Widget.MaterialComponents.TextInputLayout.FilledBox"

        android:importantForAutofill="no" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        style = "@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tilCelular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/celular"
        style = "@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tilDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion_contacto"
            style = "@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/boton_aceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accion_aceptar"
         />


</LinearLayout>