<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmacionDatos"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_activity2"
        android:gravity="center_horizontal"
        android:textSize="30sp">
        </TextView>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="20dp">

    <TextView
        android:id="@+id/tvTextoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmacion_nombre"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNombresSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp">
    </TextView>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tvTextoFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmacion_fechaN"
            android:textStyle="bold"
            >
        </TextView>

        <TextView
            android:id="@+id/tvFechaset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tvTextoEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmacion_email"
            android:textStyle="bold"
            >
        </TextView>

        <TextView
            android:id="@+id/tvEmailset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tvTextoCelular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmacion_celular"
            android:textStyle="bold"
            >
        </TextView>

        <TextView
            android:id="@+id/tvCelularset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tvTextoDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmacion_descripcion"
            android:textStyle="bold"
            >
        </TextView>

        <TextView
            android:id="@+id/tvDescripcionset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            >
        </TextView>
    </LinearLayout>

    <Button
        android:id="@+id/boton_editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_editar_datos"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />
</LinearLayout>